--- a/app/src/main/res/layout/activity_selectelistfood_user_private.xml
+++ b/app/src/main/res/layout/activity_selectelistfood_user_private.xml
@@ -23,7 +23,8 @@
         android:layout_width="200dp"
         android:layout_height="41dp"
         android:ems="10"
-        android:hint="Searching"
+        android:hint="ค้นหารายการ"
+        android:paddingLeft="10dp"
         android:textColor="#FFFFFF"
         android:textColorHint="#FFFFFF"
         android:inputType="textPersonName"
