--- a/app/src/main/res/layout/activity_selectlistexcercise_user.xml
+++ b/app/src/main/res/layout/activity_selectlistexcercise_user.xml
@@ -24,7 +24,8 @@
         android:layout_width="211dp"
         android:layout_height="41dp"
         android:ems="10"
-        android:hint="Searching"
+        android:hint="ค้นหารายการ"
+        android:paddingLeft="10dp"
         android:textColorHint="#FFFFFF"
         android:textColor="#FFFFFF"
         android:inputType="textPersonName"
