--- a/app/src/main/res/drawable/background_object.xml
+++ b/app/src/main/res/drawable/background_object.xml
@@ -1,17 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle"
     >
 
-    <gradient
-        android:angle="90"
-        android:startColor="#202e51"
-        android:centerColor="#2652a8"
-        android:endColor="#202e51"
-        android:type="linear">
-    </gradient>
-    <!-- <stroke android:width="1dp"
-         android:color="#ffffff"/>
-     <corners android:radius="15dp"/>-->
+    <!--<gradient
+           android:angle="90"
+           android:startColor="#202e51"
+           android:centerColor="#2652a8"
+           android:endColor="#202e51"
+           android:type="linear">
+       </gradient>-->
+
+       <gradient
+           android:angle="90"
+           android:startColor="#3d528f"
+           android:endColor="#36477d"
+           android:type="linear">
+       </gradient>
+       <!-- <solid android:color="#ffffff"
+            android:elevation="10dp"
+            ></solid>-->
+
+    <stroke android:width="1dp"
+          android:color="#696969"/>
+      <corners android:radius="15dp"/>
    <!-- <solid android:color="#334478"></solid>-->
-    <corners android:radius="20dp"/>
+    <corners android:radius="10dp"/>
 </shape>
