--- a/app/src/main/res/layout/activity_addexcercise_user.xml
+++ b/app/src/main/res/layout/activity_addexcercise_user.xml
@@ -67,7 +67,7 @@
         android:layout_marginEnd="162dp"
         android:layout_marginBottom="364dp"
         android:background="@drawable/button_login_style"
-        android:text="ADDEXCERCISE"
+        android:text="เพิ่มลงรายการกิจกกรม"
         android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
