--- a/app/src/main/res/layout/activity_addfood_user.xml
+++ b/app/src/main/res/layout/activity_addfood_user.xml
@@ -155,7 +155,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginBottom="168dp"
         android:background="@drawable/button_login_style"
-        android:text="ADDFOOD"
+        android:text="เพิ่มลงรายการอาหาร"
         android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
