--- a/app/src/main/res/layout/activity_addfood_user_private.xml
+++ b/app/src/main/res/layout/activity_addfood_user_private.xml
@@ -157,7 +157,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginBottom="168dp"
         android:background="@drawable/button_login_style"
-        android:text="ADDFOOD"
+        android:text="เพิ่มลงในรายการของฉัน"
         android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
