--- a/app/src/main/res/layout/activity_selectlistfood_user.xml
+++ b/app/src/main/res/layout/activity_selectlistfood_user.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -22,7 +23,8 @@
         android:layout_width="200dp"
         android:layout_height="41dp"
         android:ems="10"
-        android:hint="Searching"
+        android:hint="ค้นหารายการ"
+        android:paddingLeft="10dp"
         android:textColor="#FFFFFF"
         android:textColorHint="#FFFFFF"
         android:inputType="textPersonName"
