--- a/app/src/main/res/layout/activity_addfood_user_private.xml
+++ b/app/src/main/res/layout/activity_addfood_user_private.xml
@@ -132,23 +132,24 @@
         android:layout_marginTop="36dp"
         android:text="ประเภท"
         android:textColor="#ffffff"
-        app:layout_constraintBottom_toTopOf="@+id/inputtypeunit"
-        app:layout_constraintStart_toStartOf="@+id/inputtypeunit"
+        app:layout_constraintBottom_toTopOf="@+id/inputtypefood"
+        app:layout_constraintStart_toStartOf="@+id/inputtypefood"
         app:layout_constraintTop_toBottomOf="@+id/inputunit"
         app:layout_constraintVertical_bias="0.048" />
 
-    <EditText
-        android:id="@+id/inputtypeunit"
+    <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
+        android:id="@+id/inputtypefood"
         android:layout_width="305dp"
-        android:layout_height="wrap_content"
         android:layout_marginTop="56dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:textColor="#ffffff"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:hint="เลือกประเภทของอาหาร"
+        android:textColorHint="#05ab9a"
         app:layout_constraintEnd_toEndOf="@+id/buttonaddfood"
         app:layout_constraintHorizontal_bias="0.02"
         app:layout_constraintStart_toStartOf="@+id/buttonaddfood"
-        app:layout_constraintTop_toBottomOf="@+id/inputunit" />
+        app:layout_constraintTop_toBottomOf="@+id/inputunit"
+        app:met_textColor="#ffffff"></com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner>
 
     <Button
         android:id="@+id/buttonaddfood"
@@ -162,7 +163,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/inputtypeunit"
+        app:layout_constraintTop_toBottomOf="@+id/inputtypefood"
         app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
