refactor(mobile):add dataselect_totalvalue (not com)

--- a/app/src/main/res/layout/activity_list_edit_excercise.xml
+++ b/app/src/main/res/layout/activity_list_edit_excercise.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bacckground_color"
+    android:background="@drawable/all_background"
     tools:context=".list_edit_excercise">
 
     <include
