--- a/app/src/main/res/layout/activity_register__infirmation.xml
+++ b/app/src/main/res/layout/activity_register__infirmation.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Register_Infirmation"
-    android:background="@drawable/bacckground_color">
+    android:background="@drawable/all_background">
 
     <RelativeLayout
         android:id="@+id/bar"
