--- a/app/src/main/res/layout/activity_register__user.xml
+++ b/app/src/main/res/layout/activity_register__user.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Register_User"
-    android:background="@drawable/bacckground_color">
+    android:background="@drawable/all_background">
 
     <LinearLayout
         android:id="@+id/L0"
