--- a/app/src/main/res/layout/activity_selectlistexcercise_user.xml
+++ b/app/src/main/res/layout/activity_selectlistexcercise_user.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/bacckground_color"
+    android:background="@drawable/all_background"
     android:layout_height="match_parent"
     tools:context=".selectlistexcercise_user">
 
