--- a/app/src/main/res/layout/dialod_list.xml
+++ b/app/src/main/res/layout/dialod_list.xml
@@ -20,10 +20,11 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView2"
         android:layout_width="412dp"
-        android:layout_height="661dp"
+        android:layout_height="400dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="72dp"
         android:layout_marginEnd="20dp"
+        android:scrollbars="vertical"
         android:windowSoftInputMode="adjustPan|adjustResize"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
