--- a/app/src/main/res/layout/activity_list_edit_food_private.xml
+++ b/app/src/main/res/layout/activity_list_edit_food_private.xml
@@ -19,12 +19,13 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="572dp"
+        android:layout_height="750dp"
         android:layout_marginStart="2dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="12dp"
         android:windowSoftInputMode="adjustPan|adjustResize"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/searchView" />
 
