--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="myPeach">#ffffff</color>
     <color name="red">#262626</color>
+    <color name="colorcarenda">#5252e0</color>
 </resources>
