--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -45,8 +45,7 @@
     </style>
 
     <style name="DialogTheme" parent="Theme.AppCompat.Light.Dialog">
-        <item name="colorAccent">@color/blue_btn_bg_color</item>
-
+        <item name="colorAccent">@color/colorcarenda</item>
     </style>
 
 </resources>
