--- a/app/src/main/res/layout/activity_connect_user.xml
+++ b/app/src/main/res/layout/activity_connect_user.xml
@@ -5,22 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".connect_user"
-    android:background="@drawable/bacckground_color">
+    android:background="@drawable/all_background">
 
 
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="246dp"
-        android:layout_height="78dp"
-        android:layout_marginStart="132dp"
-        android:layout_marginTop="132dp"
-        android:layout_marginEnd="132dp"
-        android:layout_marginBottom="132dp"
-        android:text="Button"
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="241dp"
+        android:layout_height="647dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.47"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.49" />
+        app:srcCompat="@drawable/logo_healthy_body" />
 </androidx.constraintlayout.widget.ConstraintLayout>
