--- a/app/src/main/res/layout/app_dashboard.xml
+++ b/app/src/main/res/layout/app_dashboard.xml
@@ -28,7 +28,13 @@
             android:textSize="24dp"
             android:textStyle="bold"/>
 
-
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/monthyaerselect"
+            android:src="@drawable/ic_date_range_black_24dp"
+            android:layout_marginRight="10sp"
+            android:layout_alignParentRight="true" />
 
     </RelativeLayout>
 
