refactor(Mobile):keep detail

--- a/app/src/main/res/layout/activity_login_user.xml
+++ b/app/src/main/res/layout/activity_login_user.xml
@@ -97,6 +97,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password"></Button>
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="version 1.0.0 (DEMO)"
+        android:textColor="#a6a6a6"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.057"
+        app:layout_constraintStart_toStartOf="parent" />
+
 
     <!--<TextView
     android:id="@+id/textView2"
