--- a/app/src/main/res/layout/activity_dashboard_user.xml
+++ b/app/src/main/res/layout/activity_dashboard_user.xml
@@ -21,6 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="-2dp"
+        android:visibility="invisible"
         android:background="@android:color/darker_gray"></com.github.mikephil.charting.charts.BarChart>
 
 
